# server/models/Movie.js
@@ -1,39 +1,59 @@
 import { pool } from "../helpers/db.js";
 
 export const getReview = async (movieId) => {
-  const result = await pool.query(
-    `SELECT * FROM review
-       WHERE movie_id = $1
-       ORDER BY timestamp DESC`,
-    [movieId]
-  );
-  return result;
+  try {
+    const result = await pool.query(
+      `SELECT * FROM review
+         WHERE movie_id = $1
+         ORDER BY timestamp DESC`,
+      [movieId]
+    );
+    return result;
+  } catch (error) {
+    return next(new ApiError("Server error while database queries", 500));
+  }
 };
 
-export const addReview = async (movieId, userid, description, rating, email) => {
-  const result = await pool.query(
-    `INSERT INTO review (movie_id, user_id, description,rating, reviewer_email) values ($1,$2,$3,$4,$5) returning *`,
-    [movieId, userid, description, rating, email]
-  );
-  return result;
+export const addReview = async (
+  movieId,
+  userid,
+  description,
+  rating,
+  email
+) => {
+  try {
+    const result = await pool.query(
+      `INSERT INTO review (movie_id, user_id, description,rating, reviewer_email) values ($1,$2,$3,$4,$5) returning *`,
+      [movieId, userid, description, rating, email]
+    );
+    return result;
+  } catch (error) {
+    return next(new ApiError("Server error while database queries", 500));
+  }
 };
 
 export const editReview = async (id, description, rating) => {
-  const result = await pool.query(
-    `UPDATE review 
-             SET description = $1, rating = $2
-             WHERE id = $3 RETURNING *`,
-    [description, rating, id]
-  );
-  return result;
+  try {
+    const result = await pool.query(
+      `UPDATE review 
+       SET description = $1, rating = $2
+       WHERE id = $3 RETURNING *`,
+      [description, rating, id]
+    );
+    return result;
+  } catch (error) {
+    return next(new ApiError("Server error while database queries", 500));
+  }
 };
 
 export const deleteReview = async (reviewId) => {
-  const result = await pool.query(
-    `DELETE from review 
-            WHERE id = $1 RETURNING *`, [reviewId]
-  );
-  if (result.rowCount === 0) {
-    return json({ error: "Review not found" });
+  try {
+    const result = await pool.query(
+      "DELETE from review WHERE id = $1 RETURNING *",
+      [reviewId]
+    );
+    return result;
+  } catch (error) {
+    return next(new ApiError("Server error while database queries", 500));
   }
 };
